--- a/index.html
+++ b/index.html
@@ -221,7 +221,8 @@
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         </div>
                         <div class="m-3">
-                            <div class="btn panda-btn-buy-now">Buy Now</div>
+                            <div class="btn panda-btn-buy-now" id="btn-10">Buy Now</div>
+
                         </div>
                     </div>
                 </div>
@@ -229,7 +230,7 @@
         </section>
         <!-- Backpack Section End -->
         <!-- Subscribe start -->
-        <section style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center panda-bg-info" id="subscribe">
+        <section style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center panda-bg-info subscribe-section" id="subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -237,15 +238,23 @@
                     <div class="mb-1">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn panda-btn-buy-now">Submit</button>
+                    <button type="submit" class="btn submit-btn" id="submit">Submit</button>
+                    <div id="click-handler" class="btn panda-btn-buy-now">Button Click handler</div>
                 </form>
             </div>
         </section>
     </main>
+
+
+
     <footer class="mt-5 text-center">
         <p><small>©2023. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
     </footer>
+
+
     <script src="JS/app.js"></script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 
